<resources>
    <string name="app_name">EzTick</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="CrearTicket">Crear Ticket</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="fecha">Fecha</string>
    <string name="lvlPeligro">Nivel de Peligro</string>
    <string name="atras">Atras</string>
    <string name="finalizar">Finalizar</string>
    <string-array name="niveles_peligro">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
</resources>
