<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/agregar_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:height="48dp"
        android:hint="@string/titulo" />

    <EditText
        android:id="@+id/agregar_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/usuario"
        android:inputType="textMultiLine"
        android:lines="4" />

    <EditText
        android:id="@+id/agregar_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:height="48dp"
        android:hint="@string/descripcion" />

    <Spinner
        android:id="@+id/agregar_lvlpeligro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/lvlPeligro"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_primary_color"
        android:text="Agregar Ticket"
        android:textColor="@color/text_and_icons" />
</LinearLayout>
