<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="80dp"
    android:layout_marginRight="40dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_marginBottom="60dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:srcCompat="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="30dp"
        android:autoSizeTextType="uniform"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/primary_text"
        android:textColorHighlight="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        android:textColorLink="@color/primary_text" />

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/primary_text"
        android:textColorHighlight="@color/secondary_text"
        android:textColorHint="@color/secondary_text"
        android:textColorLink="@color/primary_text" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:onClick="login"
        android:text="@string/btnIngresar"
        android:textColor="#795548"
        android:textColorLink="@color/dark_primary_color" />

</LinearLayout>