<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_crear_ticket">

    <include
        layout="@layout/toolbar_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="50dp">

        <EditText
            android:id="@+id/agregar_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/titulo"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/agregar_descripcion"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/agregar_titulo"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/agregar_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/agregar_descripcion"
            tools:layout_editor_absoluteX="0dp" />

        <Spinner
            android:id="@+id/agregar_lvlpeligro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agregar_fecha" />

        <Button
            android:id="@+id/btn_agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/CrearTicket"
            android:textColor="@color/text_and_icons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agregar_lvlpeligro" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>